--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.jar=${dist.dir}/RyuPvPMod.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.craftbukkit-1.6.4-R0.1-20130920.192319-3.jar=C:\\Users\\Jamie\\Downloads\\craftbukkit-1.6.4-R0.1-20130920.192319-3.jar
+file.reference.bukkit-1.6.4-R2.1-20131031.000035-1.jar=C:\\Users\\Cameron\\Desktop\\bukkit-1.6.4-R2.1-20131031.000035-1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit-1.6.4-R0.1-20130920.192319-3.jar}
+    ${file.reference.bukkit-1.6.4-R2.1-20131031.000035-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
